<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <Button
        android:id="@+id/btn_DisplayResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/display_results"
        app:layout_constraintEnd_toEndOf="@+id/et_EnterLocation"
        app:layout_constraintStart_toStartOf="@+id/et_EnterLocation"
        app:layout_constraintTop_toBottomOf="@+id/et_EnterLocation"
        tools:text="Display Results">

    </Button>

    <EditText
        android:id="@+id/et_EnterLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="location"
        android:hint="@string/enter_your_location"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/enter_your_location" />

    <ListView
        android:id="@+id/lw_list_of_PT"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_totalReview"
        app:layout_constraintStart_toStartOf="@+id/tv_totalReview"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalReview" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btn_DisplayResults"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_DisplayResults"
        app:layout_constraintTop_toBottomOf="@+id/tv_numberOfPT"
        tools:text="@string/total" />

    <TextView
        android:id="@+id/tv_numberOfPT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_DisplayResults"
        app:layout_constraintStart_toStartOf="@+id/btn_DisplayResults"
        app:layout_constraintTop_toBottomOf="@+id/btn_DisplayResults"
        tools:text="@string/number_of_pt" />

    <TextView
        android:id="@+id/tv_totalWithRatings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_total"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_total"
        app:layout_constraintTop_toBottomOf="@+id/tv_total"
        tools:text="@string/totalwithratings" />

    <TextView
        android:id="@+id/tv_totalReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_total"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_total"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalWithRatings"
        tools:text="@string/total_reviews" />

</androidx.constraintlayout.widget.ConstraintLayout>