<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/physicalTherapist_name_TextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/physical_therapist_s_name"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/address"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/reviewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/addressTextView"
                android:layout_alignTop="@id/addressTextView"
                android:layout_marginStart="0dp"
                android:layout_marginTop="48dp"
                android:text="@string/review"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/rating"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>